--- a/blog.forecho.com/ProjectX 交易平台使用指南.html
+++ b/blog.forecho.com/ProjectX 交易平台使用指南.html
@@ -17,6 +17,11 @@
 <p>当然如果你没设置止盈止损，也可以通过拉动持仓图标来设置止盈止损。可以向上拉，也可以向下拉。一个是止盈，一个是止损。</p>
 <h2>分批止盈</h2>
 <p>设置好初始止盈初始止损之后，如果想止盈，我会右键挂 Limit Order， 限价单成交之后，初始止盈和止损会自动调整张数，这还是很方便的。</p>
+<h2>限制合约开仓数量</h2>
+<p><img alt="" src="https://img.forecho.com/cFQi3r.png"/></p>
+<p>我用的是 50k 账户，默认账户给得限制比较大，碰到单边行情，亏损不愿止损，很容易爆仓。所以需要自己改一下限制合约开仓数量，防止单边行情亏损过大。比如我给 MES 设置为 2 手。</p>
+<p>当然新手可以先设置为 1 手，不给自己加仓的机会，在不能稳定盈利之前没资格加仓。</p>
+<p>设置方式看上图。</p>
 <h2>设置最大亏损之后自动锁账户</h2>
 <p><img alt="" src="https://img.forecho.com/flGxUh.png"/></p>
 <p>在 <code>settings -&gt; risk settings</code> 中设置。</p>
