--- a/blog.forecho.com/【深度理财 27】交易期权容易犯的错.html
+++ b/blog.forecho.com/【深度理财 27】交易期权容易犯的错.html
@@ -57,13 +57,13 @@
 <h2>常见问题</h2>
 <h3>Sell Put 没到达行权价格会怎么样？</h3>
 <ul>
-<li>Sell Put 如果截止日的时候<strong>到了</strong>行权价格，那么买方就不会行权，你就赚到了权利金。</li>
-<li>Sell Put 如果截止日的时候<strong>没到</strong>行权价格，那么买方就会行权，你会使用被冻结的资金以行权价买入指定数量的股票，权利金全部归你。</li>
+<li>Sell Put 如果截止日的时候价格<strong>高于等于</strong>行权价格，那么买方就不会行权，你就赚到了权利金。</li>
+<li>Sell Put 如果截止日的时候<strong>低于</strong>行权价格，那么买方就会行权，你会使用被冻结的资金以行权价买入指定数量的股票，权利金全部归你。</li>
 </ul>
 <h3>Buy Call 没到达行权价格会怎么样？</h3>
 <ul>
-<li>Buy Put 如果截止日的时候<strong>到了</strong>行权价格，请确保有足够的资金行权，如果资金不够，期权会被强制卖出（平仓）。</li>
-<li>Buy Put 如果截止日的时候<strong>没到</strong>行权价格，期权归零。</li>
+<li>Buy Call 如果截止日的时候<strong>高于等于</strong>行权价格，请确保有足够的资金行权，如果资金不够，期权会被强制卖出（平仓）。</li>
+<li>Buy Call 如果截止日的时候<strong>低于</strong>行权价格，期权归零。</li>
 </ul>
 <h3>Sell Put 不想行权怎么办？</h3>
 <p>在到期日之前买入期权，平仓即可。</p>
