--- a/blog.forecho.com/价格行为学 - 如何复盘交易.html
+++ b/blog.forecho.com/价格行为学 - 如何复盘交易.html
@@ -102,6 +102,20 @@
 <p>这一步的目的是将你的思考过程具象化。即使你最初的分析是错误的，记录下来也能帮助你日后回顾和修正。</p>
 <p>为了让复盘图更加简洁，我使用了官方使用的英文缩写方式注释，具体缩写词典如下图：</p>
 <p><img alt="" src="https://img.forecho.com/2HM2nv.jpg"/></p>
+<h2>如何在 TradingView 跳转时间点</h2>
+<p>对于 1 年 内的 K 线图，我们可以使用 TradingView 的左下角跳转时间点功能来快速跳转。</p>
+<p>但是想跳转到 2 年之前的时间点，就需要一点技巧了，方式就是：在搜索框里输入合约+日期就可以了. 如"ESM2022"直接<strong>点回车</strong>就行了。</p>
+<p><img alt="" src="https://img.forecho.com/o4kKxg.png"/></p>
+<p>ES 之后的 H M U Z 分别对应了 3月、6月、9月、12月的四个合约。</p>
+<p>Bar Count 指标可以使用下面两个（其他的 Bar Count 指标不对于远期时间点无效）：</p>
+<ul>
+<li><a href="https://cn.tradingview.com/script/YBg5QAh4-Intraday-Bar-Counting/">https://cn.tradingview.com/script/YBg5QAh4-Intraday-Bar-Counting/</a></li>
+<li><a href="https://cn.tradingview.com/script/VLPP33S1-bar-count-plot-only-for-far-lookback/">https://cn.tradingview.com/script/VLPP33S1-bar-count-plot-only-for-far-lookback/</a></li>
+</ul>
+<h2>使用 PAHUB 一起来复盘</h2>
+<p>我最近开发了一个网站，提供一个价格行为学社区，大家一起复盘，一起学习，一起进步。其中有一个复盘任务模块，每天会自动随机选一个日期作为复盘任务，大家可以在 TradingView 上完成复盘任务，并提交到社区中。完成提交之后可以查看其他人的复盘结果，并进行讨论。</p>
+<p>复盘地址：<a href="https://pahubcn.com/app/review-tasks">https://pahubcn.com/app/review-tasks</a></p>
+<p>欢迎大家访问并参与进来，一起学习价格行为学，一起进步。</p>
 <h2>总结</h2>
 <p>系统化的复盘是从新手到稳定盈利交易员的必经之路。Al Brooks 的五步法为我们提供了一个清晰、可执行的框架：</p>
 <ol>
@@ -112,3 +126,9 @@
 <li><strong>坚持每日练习</strong>，直到你形成肌肉记忆。</li>
 </ol>
 <p>通过日复一日的刻意练习，你将能更从容地应对瞬息万变的市场，并更准确地把握交易机会。</p>
+<h2>参考资料</h2>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=AGyOld9iY8U">5 Steps to Finding Today's Trades</a></li>
+<li><a href="https://www.youtube.com/watch?v=QuLPncRIo9w">如何通过复盘训练提高自己的实盘能力【价格行为学】</a></li>
+<li><a href="https://www.youtube.com/watch?v=J5fI0aB_rCI">价格行为学|5步找到交易机会|Price Action Al Brooks|BTC|形态|K线</a></li>
+</ul>
