--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -965,7 +965,7 @@ java -Dfile.encoding=UTF-8 -classpath .;./junit4.jar;./org.hamcrest.core_1.3.0.j
 </code></pre>
 <h2>python 的 http 服务和 cgi</h2>
 <blockquote><p>python 的 cgi 模块在 3.13 被移除了
-<a href="https://docs.python.org/zh-tw/3.12/library/cgi.html">https://docs.python.org/zh-tw/3.12/library/cgi.html</a>
+<a href="https://docs.python.org/zh-cn/3.12/library/cgi.html">https://docs.python.org/zh-cn/3.12/library/cgi.html</a>
 <a href="https://peps.python.org/pep-0594/#cgi">https://peps.python.org/pep-0594/#cgi</a></p>
 </blockquote>
 <p>python 一行命令启动 http 服务</p>
@@ -1254,6 +1254,76 @@ nc 理论上也可以实现，但一行代码会写得非常长
 </li>
 </ul>
 &lt;!--
+
+python 的类型
+    数字 numeric
+        整数 int
+        浮点数 float
+        复数 complex
+    布尔 bool
+    序列 sequence
+        不可变序列 immutable-sequences
+            tuple(元组)
+            str(字符串)
+            bytes(字节串)
+        可变序列 mutable-sequences
+            list(列表)
+            bytearray(字节数组)
+    集合 set
+        可变集合 mutable set
+            set(集合)
+        不可变集合 immutable set
+            frozenset(冻结集合)
+    映射 mapping
+        dict(字典)
+和类型相关的内置函数
+    bool()
+    bytearray()
+    bytes()
+    complex()
+    dict()
+    float()
+    frozenset()
+    int()
+    list()
+    map()
+    object()
+    range()
+    set()
+    tuple()
+    type()
+内置常量
+    True False None
+
+range 是 list 的子类
+bool 是 int 的子类
+float 是 int 的子类
+但 complex 不是 int 的子类
+
+有内置函数的就当是内置类型吧
+所有类型都是 类
+object 是所有类型的父类
+
+数据模型
+https://docs.python.org/zh-cn/3.12/reference/datamodel.html
+内置类型
+https://docs.python.org/zh-cn/3.14/library/stdtypes.html
+
+type(object)
+    传入一个参数时，返回 object 的类型。
+issubclass(class, classinfo)
+    如果 class 是 classinfo 的子类（直接、间接或 虚的 ），则返回 True。
+isinstance(object, classinfo)
+    如果 object 参数是 classinfo 参数的实例，或者是其 (直接、间接或 虚拟) 子类的实例则返回 True。 
+    则该函数总是返回 False。 
+    推荐使用 isinstance() 内置函数来检测对象的类型，因为它会考虑子类的情况。
+
+
+python的列表（List）大概等于 C语言中的动态数组 []
+python的元组（Tuple）大概等于 C语言中的普通数组 ()
+python的字典（Dictionary）就是键值对，从形式上看，最接近php的数组 {}
+python的集合（Set）是元素无序的不重复的线性表
+
 
 python 转换成 exe
 
@@ -2246,6 +2316,84 @@ powershell 转换为 exe
 <li>版本十分混乱</li>
 <li>虽然默认情况下 windows 都有安装 powershell ，但默认情况下是不能执行 powershell 脚本的</li>
 </ul>
+<h2>adminer 设置 sqlite 的密码访问</h2>
+<ol>
+<li>下载 adminer<pre><code> php -r "copy('https://github.com/vrana/adminer/releases/download/v5.4.1/adminer-5.4.1.php', 'adminer.php');"
+</code></pre>
+</li>
+<li>新建一个 sqlite 库（如果已经有db文件，忽略这一步）<pre><code> php -r "print((new SQLite3('test.db'))-&gt;querySingle('SELECT SQLITE_VERSION()'));"
+</code></pre>
+</li>
+<li>在 adminer.php 的同级目录下新建一个目录 adminer-plugins<pre><code> mkdir adminer-plugins
+</code></pre>
+</li>
+<li><p>在 adminer-plugins 目录下新建一个文件 login-password-less.php ，并写入以下内容</p>
+<pre><code> touch login-password-less.php
+ vi login-password-less.php
+</code></pre>
+<pre><code class="lang-php"> &lt;?php
+
+ /** Enable login without password
+ * @link https://www.adminer.org/plugins/#use
+ * @author Jakub Vrana, https://www.vrana.cz/
+ * @license https://www.apache.org/licenses/LICENSE-2.0 Apache License, Version 2.0
+ * @license https://www.gnu.org/licenses/gpl-2.0.html GNU General Public License, version 2 (one or other)
+ */
+ class AdminerLoginPasswordLess extends Adminer\Plugin {
+     protected $password_hash;
+
+     /** Set allowed password
+     * @param string $password_hash result of password_hash()
+     */
+     function __construct($password_hash) {
+         $this-&gt;password_hash = $password_hash;
+     }
+
+     function credentials() {
+         $password = Adminer\get_password();
+         return array(Adminer\SERVER, $_GET["username"], (password_verify($password, $this-&gt;password_hash) ? "" : $password));
+     }
+
+     function login($login, $password) {
+         // if ($login == 'admin' &amp;&amp; $password == '') {
+         //  return true;
+         // } else {
+         //  return false;
+         // }
+         if ($password != "") {
+             return true;
+         }
+     }
+
+     protected $translations = array(
+         'cs' =&gt; array('' =&gt; 'Povolí přihlášení bez hesla'),
+         'de' =&gt; array('' =&gt; 'Ermöglicht die Anmeldung ohne Passwort'),
+         'pl' =&gt; array('' =&gt; 'Włącz logowanie bez hasła'),
+         'ro' =&gt; array('' =&gt; 'Activați autentificarea fără parolă'),
+         'ja' =&gt; array('' =&gt; 'パスワードなしのログインを許可'),
+     );
+ }
+</code></pre>
+</li>
+<li>在 adminer.php 的同级目录下新建一个一个文件 adminer-plugins.php ，并写入以下内容<pre><code> touch adminer-plugins.php
+ vi adminer-plugins.php
+</code></pre>
+<pre><code class="lang-php"> &lt;?php // adminer-plugins.php
+ return array(
+     // new AdminerLoginPasswordLess('$2y$07$Czp9G/aLi3AnaUqpvkF05OHO1LMizrAgMLvnaOdvQovHaRv28XDhG'),
+     new AdminerLoginPasswordLess(password_hash("PASSWORD", PASSWORD_DEFAULT)),
+     // You can specify all plugins here or just the ones needing configuration.
+ );
+</code></pre>
+</li>
+<li></li>
+<li>参考<ul>
+<li><a href="https://www.adminer.org/en/password/">https://www.adminer.org/en/password/</a></li>
+<li><a href="https://github.com/vrana/adminer/blob/master/plugins/login-password-less.php">https://github.com/vrana/adminer/blob/master/plugins/login-password-less.php</a></li>
+<li><a href="https://github.com/vrana/adminer/blob/master/adminer/sqlite.php">https://github.com/vrana/adminer/blob/master/adminer/sqlite.php</a></li>
+</ul>
+</li>
+</ol>
 <h2>linux 的使用经验</h2>
 <h2>git 的使用经验</h2>
 &lt;!--
@@ -2268,6 +2416,117 @@ githook
 git服务
 --&gt;
 
+<h2>symfony/rate-limiter 的使用经验</h2>
+<pre><code class="lang-php">&lt;?php
+
+require 'vendor/autoload.php';
+
+use Symfony\Component\RateLimiter\Storage\InMemoryStorage;
+use Symfony\Component\RateLimiter\RateLimiterFactory;
+
+use Symfony\Component\RateLimiter\Storage\StorageInterface;
+// use Psr\Cache\CacheItemPoolInterface;
+use Symfony\Component\RateLimiter\LimiterStateInterface;
+
+
+class FileStorage implements StorageInterface
+{
+    public function save(LimiterStateInterface $limiterState): void
+    {
+        file_put_contents($limiterState-&gt;getId(), serialize($limiterState));
+    }
+
+    public function fetch(string $limiterStateId): ?LimiterStateInterface
+    {
+        if (!file_exists($limiterStateId)) {
+            return null;
+        }
+
+        $limiterState = unserialize(file_get_contents($limiterStateId));
+        $expireAt = $this-&gt;getExpireAt($limiterState);
+        if (null !== $expireAt &amp;&amp; $expireAt &lt;= microtime(true)) {
+            $this-&gt;delete($limiterStateId);
+            return null;
+        } else if (null === $expireAt) {
+            $this-&gt;delete($limiterStateId);
+            return null;
+        }
+
+        return $limiterState;
+    }
+
+    public function delete(string $limiterStateId): void
+    {
+        if (!file_exists($limiterStateId)) {
+            return;
+        }
+
+        unlink($limiterStateId);
+    }
+
+    private function getExpireAt(LimiterStateInterface $limiterState): ?float
+    {
+        if (null !== ($expireSeconds = $limiterState-&gt;getExpirationTime())) {
+            return microtime(true) + $expireSeconds;
+        }
+
+        return null;
+    }
+}
+
+$factory = new RateLimiterFactory([
+    'id' =&gt; 'login',
+    'policy' =&gt; 'fixed_window',
+    'limit' =&gt; 20,
+    // 'rate' =&gt; ['interval' =&gt; '15 minutes'],
+    'interval' =&gt; '60 seconds',
+], new FileStorage());
+
+$limiter = $factory-&gt;create('id');
+
+$rateLimit = $limiter-&gt;consume();
+if (!$rateLimit-&gt;isAccepted()) {
+    // header('');
+    http_response_code(429);
+    echo 'Too Many Requests';
+} else {
+    echo 'OK';
+}
+echo PHP_EOL;
+try {
+
+    // var_dump(file_exists('login-id'));
+    // $limiterState = unserialize(file_get_contents('login-id'));
+    // var_dump(get_class($limiterState));
+    $limiterState = (new FileStorage())-&gt;fetch('login-id');
+    echo $limiterState-&gt;getId();
+    echo PHP_EOL;
+    echo $limiterState-&gt;getExpirationTime();
+    echo PHP_EOL;
+} catch(\Throwable $e) {
+    echo $e-&gt;getMessage();
+    echo PHP_EOL;
+}
+
+exit(0);
+
+/*
+
+composer require symfony/rate-limiter:6.4
+
+PHP_CLI_SERVER_WORKERS="10" php -S 0.0.0.0:8080
+
+curl http://127.0.0.1:8080/ratelimiter.php
+
+echo $(for i in $(seq 1 10); do echo curl -o /dev/null -s -w %{http_code}, http://127.0.0.1:8080/ratelimiter.php; echo ";";done ) | \
+xargs -d ";" -n 1 -P 2 bash -c '$0' | \
+sed 's/,/\n/g'
+
+如何改用 redis 或其它存储？
+这个组件在 Symfony 里是如何使用的？
+
+*/
+</code></pre>
 <h2>那些能作为工具的网站</h2>
 <ul>
 <li>能查看到编译的汇编代码
