--- a/kexizeroing.github.io/Built-in AI and run local LLMs.html
+++ b/kexizeroing.github.io/Built-in AI and run local LLMs.html
@@ -148,6 +148,13 @@ for await (const chunk of stream) {
   console.log(chunk);
 }
 </code></pre>
+<p>Implementation strategy:</p>
+<ul>
+<li>Check first: Use the Chrome Gemini API to verify device and feature compatibility.</li>
+<li>Download: If the device is supported, trigger the model download.</li>
+<li>Use backup: While the model is downloading, use a cloud-based API to provide the service.</li>
+<li>Switch over: Enable the feature using the built-in model only after it has been successfully downloaded.</li>
+</ul>
 <h2>Run open-source LLMs locally on your computer</h2>
 <ol>
 <li><p>Ollama + OpenWebUI</p>
