--- a/kexizeroing.github.io/Container queries and :has selector.html
+++ b/kexizeroing.github.io/Container queries and :has selector.html
@@ -86,6 +86,11 @@
 <blockquote><p><code>.card:has(:not(img))</code> means “select a card that has any element that is not an image”. <code>.card:not(:has(img))</code> means “select a card doesn't have an image”, and that's exactly what we want.</p>
 </blockquote>
 <p>Use Case 1: "Quantity Queries" are very easy in CSS now that we have <code>:has()</code>. You can just check if an element, for example, has a 10th child, like <code>.el:has(:nth-child(10))</code>, and now you know there are at least 10 children.</p>
+<pre><code class="lang-css">/* If when we have more than 4 items */
+.section:has(.card:nth-last-child(n + 4)) {
+  grid-template-columns: 1fr;
+}
+</code></pre>
 <p>Use Case 2: Imagine that you need to open a modal window, it's good practice to prevent the page behind it from scrolling. That's a scroll lock. We can tweak the CSS declaration on our body element to use <code>:has()</code>. As long as an element with <code>.lock-scroll</code> is in the DOM, the scroll we be locked.</p>
 <pre><code class="lang-css">body:has(.lock-scroll) {
   overflow: hidden;
