--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -21,6 +21,7 @@
 <p>Why web tech is like this: <a href="https://www.youtube.com/watch?v=3QEoJRjxnxQ">https://www.youtube.com/watch?v=3QEoJRjxnxQ</a></p>
 <p>B-trees and database indexes: <a href="https://planetscale.com/blog/btrees-and-database-indexes">https://planetscale.com/blog/btrees-and-database-indexes</a></p>
 <p>In-browser game that teaches core Vim motions: <a href="https://renzorlive.github.io/vimmaster">https://renzorlive.github.io/vimmaster</a></p>
+<p>Clean Architecture on Frontend: <a href="https://dev.to/bespoyasov/clean-architecture-on-frontend-4311">https://dev.to/bespoyasov/clean-architecture-on-frontend-4311</a>, <a href="https://bespoyasov.me/slides/clean-architecture-on-frontend/">https://bespoyasov.me/slides/clean-architecture-on-frontend/</a></p>
 <hr/>
 <h2>Tools and Cool websites</h2>
 <p>Chrome urls: <a href="chrome://chrome-urls/">chrome://chrome-urls</a></p>
@@ -81,6 +82,7 @@
 <p>Universal bundle analyzer: <a href="https://sonda.dev">https://sonda.dev</a></p>
 <p>Converting files and office documents to Markdown: <a href="https://github.com/microsoft/markitdown">https://github.com/microsoft/markitdown</a></p>
 <p>Native desktop automation that controls your mouse: <a href="https://github.com/nut-tree/nut.js">https://github.com/nut-tree/nut.js</a>, <a href="https://www.npmjs.com/package/@nut-tree-fork/nut-js">https://www.npmjs.com/package/@nut-tree-fork/nut-js</a></p>
+<p>Make Graph for data visualization needs: <a href="https://makegraph.app">https://makegraph.app</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Defensive CSS - writing CSS that is protected: <a href="https://ishadeed.com/article/defensive-css">https://ishadeed.com/article/defensive-css</a></p>
