--- a/kexizeroing.github.io/Data Fetching with TanStack Query.html
+++ b/kexizeroing.github.io/Data Fetching with TanStack Query.html
@@ -184,7 +184,7 @@ const Bookmarks = ({ category }) =&gt; {
   });
 }
 </code></pre>
-<p>When using suspense mode, <code>status</code> states and <code>error</code> objects are not needed and are then replaced by usage of the Suspense and ErrorBoundary. <code>data</code> is guaranteed to be defined.</p>
+<p>Use <code>useSuspenseQuery</code> when you want to leverage React's Suspense for declarative data fetching, which automatically suspends the component while data is loading. When using suspense mode, <code>status</code> states and <code>error</code> objects are not needed and are then replaced by usage of the Suspense and ErrorBoundary. <code>data</code> is guaranteed to be defined.</p>
 <pre><code class="lang-js">import { useSuspenseQuery } from '@tanstack/react-query';
 
 function SuspendedComponent() {
@@ -203,6 +203,19 @@ function App() {
     &lt;/Suspense&gt;
   );
 }
+</code></pre>
+<p>One of the best ways to share <code>queryKey</code> and <code>queryFn</code> between multiple places is to use the <code>queryOptions</code> helper. It makes sense to abstract the object away into a query definition. At runtime, this helper just returns whatever you pass into it, but it has a lot of advantages when using it with TypeScript.</p>
+<pre><code class="lang-ts">const todosQuery = queryOptions({
+  queryKey: ['todos'],
+  queryFn: async () =&gt; {
+    const response = await fetch('/api/todos');
+    return response.json();
+  },
+  staleTime: 1000 * 60
+});
+
+// Then, use it in a component
+useQuery(todosQuery);
 </code></pre>
 <p>In most examples, we create the <code>QueryClient</code> outside the App component, which makes it referentially stable. The <code>QueryClient</code> holds the <code>QueryCache</code>, so if you create a new client, you also get a new cache, which will be empty.</p>
 <p>The <code>QueryClientProvider</code> puts the created <code>QueryClient</code> into React Context to distribute it throughout your app. You can best read it with <code>useQueryClient</code>.</p>
