--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -65,6 +65,28 @@ A---B---C main
          \
           D'--E'--F' my-feature (new history)
 </code></pre>
+<h3>how to rebase in your branch</h3>
+<pre><code>git checkout feature
+git fetch origin
+git rebase origin/main
+</code></pre>
+<p><code>rebase</code> here means "take all my commits on this branch, and replay them on top of the latest <code>origin/main</code>".</p>
+<ol>
+<li>Save your commits</li>
+<li>Reset your branch to <code>origin/main</code></li>
+<li>Reapply your commits one by one on top</li>
+</ol>
+<pre><code>origin/main -- A -- B -- C1 -- C2 -- C3  &lt;-- your feature branch
+</code></pre>
+<p>Your local <code>main</code> branch still points to an old commit (<code>A</code>maybe), your <code>origin/main</code> points to the latest on GitHub and your branch now sits on top of that.</p>
+<p>Because the rebase rewrites your commits (they get new SHAs), GitHub will see your branch history as different from before. So when you push, you need to force it: <code>git push --force-with-lease</code>. That replace the old version of your branch with the rebased one.</p>
+<p>Note that <code>origin/branch</code> is a local copy or "last known state" of the remote branch on your machine. When it's outdated, <code>--force-with-lease</code> can't verify you're not overwriting work, so it rejects the push.</p>
+<p>GitHub's web UI shows commit date, so if you rebase, everything looks fresh made, but the author date is still preserved inside Git itself.</p>
+<blockquote><ul>
+<li>AuthorDate: when you originally made the commit.</li>
+<li>CommitDate: when that commit object was created. <code>git log --pretty=fuller</code> shows both dates.</li>
+</ul>
+</blockquote>
 <h2>undo a git merge with conflicts</h2>
 <ul>
 <li><p>Since your pull was unsuccessful then HEAD is the last "valid" commit on your branch: <code>git reset --hard HEAD</code></p>
