--- a/kexizeroing.github.io/HTTP cookies explained and security policy.html
+++ b/kexizeroing.github.io/HTTP cookies explained and security policy.html
@@ -122,6 +122,10 @@ DOMPurify.sanitize('&lt;p&gt;abc&lt;iframe//src=jAva&amp;Tab;script:alert(3)&gt;
 <li>Images from the site's own origin and <code>img.example.com</code></li>
 <li>Styles only from the site's origin.</li>
 </ul>
+<p>The CSP <code>frame-ancestors</code> directive specifies valid parents that may embed a page using iframes. It allows you to specify what parent source may embed a page. This differs from <code>frame-src</code>, which allows you to specify where iframes in a page may be loaded from.</p>
+<blockquote><p>Example error message in the browser console when an iframe is blocked by CSP:</p>
+<p>Refused to frame '<a href="https://example.com/">https://example.com/</a>' because an ancestor violates the following Content Security Policy directive: "frame-ancestors <a href="https://parent1.com">https://parent1.com</a> <a href="https://parent2.com">https://parent2.com</a>".</p>
+</blockquote>
 <h4>Hotlink Protection</h4>
 <p>Hotlinking happens when someone embeds your hosted files (images, videos, PDFs, etc.) on their site by linking directly to your URL.</p>
 <ul>
