--- a/kexizeroing.github.io/How common web mechanisms work under the hood.html
+++ b/kexizeroing.github.io/How common web mechanisms work under the hood.html
@@ -587,13 +587,20 @@ if (import.meta.hot) {
 <p>Here's an example of a source map:</p>
 <pre><code class="lang-js">{
   "version": 3,
-  "file": "example.min.js.map",
+  "file": "example.min.js",
   "names": ["document", "querySelector", ...],
   "sources": ["src/script.ts"],
   "sourcesContent": ["document.querySelector('button')..."],
   "mappings": "AAAAA,SAASC,cAAc,WAAWC, ...",
 }
 </code></pre>
+<ul>
+<li><code>version</code>: Indicates the source map version (currently always 3).</li>
+<li><code>file</code>: The generated file name this source map corresponds to.</li>
+<li><code>sources</code>: Array of original source file paths from which the generated file was built.</li>
+<li><code>sourcesContent</code>: Optional array containing the actual source code. This allows DevTools to display sources even if the original files aren't accessible. Usually disabled in production builds.</li>
+<li><code>names</code>: Array of original identifiers (variable names, function names, etc.) that appear in the source. Referenced by the mappings.</li>
+</ul>
 <p>The most important part of a source map is the <code>mappings</code> field. It uses encoded strings to map lines and locations in the compiled file to the corresponding original file. Below example is from <a href="https://www.youtube.com/watch?v=oVcv3QZiXNM">https://www.youtube.com/watch?v=oVcv3QZiXNM</a></p>
 <pre><code>step 1: Convert base64 (A-Za-z0-9+/) to binary. Ending with 1 means negative
 AAKA -&gt; 000000 000000 001010 000000
