--- a/kexizeroing.github.io/Intro to Protocol Buffers (Protobuf).html
+++ b/kexizeroing.github.io/Intro to Protocol Buffers (Protobuf).html
@@ -128,19 +128,31 @@ const user = User.decode(buffer);
 
 console.log(user.name);
 </code></pre>
-<p>If your backend exposes gRPC-Web, use it in your frontend:</p>
-<pre><code class="lang-ts">import { UserServiceClientImpl, GetUserRequest } from "../generated/user";
-import { GrpcWebImpl } from "../generated/grpc_web"; // generated helper
+<p>If you use gRPC (or gRPC-Web on the frontend), the client and server handle that serialization, framing, and transport layer for you. So you no longer use <code>fetch()</code> manually.</p>
+<pre><code class="lang-ts">import { UserServiceClientImpl } from "../generated/user";
+import { GetUserRequest } from "../generated/user";
 
-const rpc = new GrpcWebImpl("https://your-server.example.com", {
-  debug: true,
+const client = new UserServiceClientImpl({
+  baseUrl: "https://api.example.com",
 });
-const client = new UserServiceClientImpl(rpc);
 
-// call the service
-const user = await client.GetUser({ id: 1 });
-console.log(user.name);
+const request: GetUserRequest = { id: 1 };
+const response = await client.GetUser(request);
+
+console.log(response.name);
 </code></pre>
+<blockquote><p>With traditional HTTP/REST APIs, you call a URL and get a response. With RPC, you call a function and get a response.</p>
+<p>Don't think about HTTP/REST implementation details. You call functions, and the RPC framework takes care of everything else. You should ignore details like HTTP Verbs, since they carry meaning in REST APIs, but in RPC form part of your function names instead, for instance: <code>getUser(id)</code> instead of <code>GET /users/:id</code>.</p>
+</blockquote>
+<h3>Using Protobuf schemas with JSON</h3>
+<p>In many production systems, <code>.proto</code> files are still used as schemas, but the actual data exchanged is JSON, not binary. It’s easier to debug and inspect over HTTP.</p>
+<p>Your codebase likely has generated <code>serialize</code> and <code>deserialize</code> methods for each message type. They map between field names and short tags like <code>{A: ..., B: ...}</code>, which correspond to the field numbers in your <code>.proto</code> file.</p>
+<ul>
+<li>Those letters correspond to field numbers (1, 2, 3...), encoded deterministically by the generator to make JSON smaller and avoid name collisions.</li>
+<li>The backend never depends on "name" or "id" directly — only on the tag numbers defined in your <code>.proto</code> file.</li>
+</ul>
+<p>This compact JSON format isn’t limited to APIs. In SSR or hybrid systems, the backend embeds a bootstrap variable directly into the HTML. That variable is a serialized Protobuf message, but encoded as JSON. The frontend needs to deserialize it to restore the same typed data structures that the backend used.</p>
+<p>This pattern predates full gRPC designs. It worked well for systems that shared schemas between backend and frontend. Modern Protobuf (proto3) has since moved toward binary or structured JSON transport through official tools like gRPC-Web. These newer patterns preserve field names, provide built-in JSON mapping, and integrate naturally with TypeScript, making them easier to debug and more maintainable.</p>
 <h2>Protobuf and gRPC</h2>
 <p>gRPC is a high-performance communication framework like REST, but more efficient and strongly typed. It allows one program (like your frontend) to call a function that actually runs on another computer (like your backend), almost as if it were a local call.</p>
 <p>gRPC has two sides: a server side, and a client side that is able to dial a server. The server exposes RPCs (i.e. functions that you can call remotely). gRPC uses protobuf as its wire format and API contract. When you combine them, code generators produce client and server stubs that handle serialization/deserialization and network communication automatically.</p>
@@ -158,3 +170,51 @@ const user = await getUser({ id: 123 });
 <li>The client deserializes that binary data into a usable TypeScript object.</li>
 </ol>
 <p>Normal gRPC (used by backend-to-backend communication) runs over HTTP/2. Browsers can’t fully control HTTP/2 like servers can. That means you can’t directly call a gRPC service from browser JavaScript using <code>fetch()</code> or <code>XMLHttpRequest</code>. To bridge this gap, gRPC-Web provides a browser-compatible variant of gRPC that wraps the same protobuf messages in a simplified wire format browsers can handle.</p>
+<h2>What is tRPC</h2>
+<p>When the backend and frontend are developed by different teams or written in different languages, schema-based or code-generation approaches are the standard way to keep both sides aligned.</p>
+<ul>
+<li><strong>OpenAPI (Swagger)</strong>: Teams define an API specification in JSON or YAML that describes all endpoints, parameters, and responses. From that spec, tools like <a href="https://github.com/OpenAPITools/openapi-generator">openapi-generator</a> or <a href="https://github.com/swagger-api/swagger-codegen">swagger-codegen</a> can generate fully typed client code for the frontend.</li>
+<li><strong>GraphQL</strong>: Both the frontend and backend share a schema that defines all available queries, mutations, and types. This schema serves as a single source of truth for the data contract, ensuring both sides always agree on what data is available and how to request it.</li>
+<li><strong>Protobuf</strong>: The API is defined in <code>.proto</code> files, and code generation produces backend service stubs and frontend clients in multiple languages.</li>
+</ul>
+<p>Let's also talk about tRPC. tRPC is a TypeScript framework for building APIs without writing an API layer manually. It doesn’t generate code, doesn’t use <code>.proto</code> files, and doesn’t even define routes in the usual REST sense. Instead, it infers the types and contract automatically from your backend functions.</p>
+<pre><code class="lang-ts">import { initTRPC } from "@trpc/server";
+const t = initTRPC.create();
+
+export const appRouter = t.router({
+  getUser: t.procedure
+    .input(
+      z.object({ name: z.string() })
+    )
+    .query(({ input }) =&gt; {
+      return {
+        text: `Hello, ${input.name}!`,
+      };
+    }),
+});
+
+export type AppRouter = typeof appRouter;
+</code></pre>
+<p>A <code>procedure</code> in tRPC is basically one API endpoint. You can think of it as a single “operation” your frontend can call. Then on your frontend, you connect to it:</p>
+<pre><code class="lang-ts">// utils/trpc.ts
+import { createTRPCReact } from '@trpc/react-query';
+import type { AppRouter } from '@/server';
+ 
+export const trpc = createTRPCReact&lt;AppRouter&gt;();
+
+// In components
+function UserProfile() {
+  const userQuery = trpc.getUser.useQuery({ name: 'Alice' });
+  return &lt;p&gt;{userQuery.data?.text}&lt;/p&gt;;
+}
+
+// Provider setup omitted for brevity
+// wrap your application in the tRPC provider and QueryClient provider
+</code></pre>
+<blockquote><p>You can open up your Intellisense (editor) to explore your API on your frontend. You'll find all of your procedure routes waiting for you along with the methods for calling them.</p>
+<p>If we didn’t have tRPC, the response we get back would likely be typed as <code>any</code>, because we don’t know exactly what the server will return. This is where tRPC shines: it preserves types all the way from the schema through Drizzle and the remote procedure calls, up to the client, for both queries and mutations.</p>
+<p>Btw, Server Actions in Next.js let you define server-side functions that are fully typed and callable directly from your components.</p>
+</blockquote>
+<p>tRPC itself doesn’t implement caching, request deduplication, or retry logic. That’s why it integrates directly with React Query. So when you call <code>trpc.getUser.useQuery()</code>, under the hood it’s using React Query’s <code>useQuery</code> hook with your API endpoint already wired up.</p>
+<p>In client-side rendering, the trpc call still makes a real HTTP request, but tRPC handles serialization and fetching for you. In server-side rendering, the server calls the same tRPC procedures directly, renders HTML with the fetched data, and sends it to the client.</p>
+<p>If you’re already using TypeScript on both your frontend and backend, tRPC fits in perfectly. It relies entirely on TypeScript’s type system, so you get full end-to-end type safety without writing or maintaining an external schema. Since tRPC depends entirely on TypeScript, it really shines only in a full TypeScript ecosystem and isn’t suitable for cross-language setups.</p>
