--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -722,8 +722,32 @@ declare global {
 <p>When you actually want to ignore an error, you'll be tempted to use <code>@ts-ignore</code>. It works similarly to <code>@ts-expect-error</code>, except for one thing: it won't error if it doesn't find an error.</p>
 <p>Sometimes, you'll want to ignore an error that later down the line gets fixed. If you're using <code>@ts-ignore</code>, it'll just ignore the fact that the error is gone. But with <code>@ts-expect-error</code>, you'll actually get a hint that the directive is now safe to remove. So if you're choosing between them, pick <code>@ts-expect-error</code>.</p>
 <p>The <code>@ts-nocheck</code> directive will completely remove type checking for a file. To use it, add the directive at the top of your file.</p>
+<h3>Classes differences between TS and ES6</h3>
+<p>TypeScript supports access modifiers to control property and method visibility. JavaScript traditionally has no access modifiers, but ES2022 introduced private fields with <code>#</code>.</p>
+<p>In TS, when you declare constructor parameters with an access modifier (<code>public</code>, <code>private</code>, <code>protected</code>, or <code>readonly</code>), it automatically creates and initializes a class property for you.</p>
+<pre><code class="lang-ts">constructor(private readonly httpService: HttpService) {}
+
+// it is equivalent to writing this in a plain ES6 class:
+class MyClass {
+  constructor(httpService) {
+    this.httpService = httpService;
+  }
+</code></pre>
+<p>TypeScript allows classes to implement interfaces.</p>
+<pre><code class="lang-ts">interface Printable {
+  print(): void;
+}
+
+class Document implements Printable {
+  print(): void {
+    console.log("Printing document...");
+  }
+}
+</code></pre>
 <h2>Building the Validation Schema with Zod</h2>
 <p><a href="https://github.com/colinhacks/zod">Zod</a> is a TypeScript-first schema declaration and validation library. With Zod, you declare a validator once and Zod will automatically infer the static TypeScript type. It's easy to compose simpler types into complex data structures.</p>
+<blockquote><p>TypeScript ensures type safety during development and the build process, while Zod validates untrusted data at runtime. TypeScript is enough for internal functions, controlled components; Anything from external sources (APIs, user input) should use Zod.</p>
+</blockquote>
 <pre><code class="lang-js">import { z } from "zod";
 
 // creating a schema for strings
