--- a/kexizeroing.github.io/React 18 Suspense and startTransition.html
+++ b/kexizeroing.github.io/React 18 Suspense and startTransition.html
@@ -355,3 +355,4 @@ function MyComponent() {
 </code></pre>
 </li>
 </ol>
+<p>Read <a href="https://nextjs.org/docs/app/getting-started/fetching-data">https://nextjs.org/docs/app/getting-started/fetching-data</a> to learn fetch data in Server and Client Components, and how to stream components that depend on data.</p>
