--- a/kexizeroing.github.io/React hooks clone and related concepts.html
+++ b/kexizeroing.github.io/React hooks clone and related concepts.html
@@ -204,10 +204,10 @@ useEffect(() =&gt; {
   );
 };
 </code></pre>
-<p>The way to fight this, other than <code>React.memo</code>, is to extract <code>ChildComponent</code> outside and pass it as children. React "children" is just a prop. When you pass children through props, React treats them as stable references. The child components were already created when the parent's JSX was evaluated, so they don't get recreated just because the parent re-renders. React simply passes the same element references down.</p>
+<p>The way to fight this, other than <code>React.memo</code>, is to extract <code>ChildComponent</code> outside and pass it as children. React "children" is just a prop. <strong>When you pass children through props, React treats them as stable references</strong>. The child components were already created when the parent's JSX was evaluated, so they don't get recreated just because the parent re-renders. React simply passes the same element references down.</p>
 <blockquote><p>The children prop acts like a "slot" that holds pre-created elements, making it one of React's most effective built-in optimization techniques.</p>
 </blockquote>
-<pre><code class="lang-jsx">// https://www.developerway.com/posts/react-elements-children-parents
+<pre><code class="lang-jsx">// Read this article: https://www.developerway.com/posts/react-elements-children-parents
 const MovingComponent = ({ children }) =&gt; {
   const [state, setState] = useState({ x: 100, y: 100 });
 
@@ -287,9 +287,13 @@ function ExpensiveComponent({ children }) {
 }
 const ExpensiveTree = React.memo(ExpensiveComponent)
 </code></pre>
+<p>How to memoize below code correctly? We can re-write the code to make the flow clearer by using children prop which accepts a React element. We re-create this object on every render, so that children prop changed, and will trigger re-render. And since <code>SomeOtherComponent</code>'s definition was re-created, it will trigger its re-render as well.</p>
 <pre><code class="lang-js">&lt;VerySlowComponent&gt;
   &lt;SomeOtherComponent /&gt;
 &lt;/VerySlowComponent&gt;
+
+// Same as:
+&lt;VerySlowComponent children={&lt;SomeOtherComponent /&gt;} /&gt;
 
 // It should memoize like this:
 const VerySlowComponentMemo = React.memo(VerySlowComponent);
@@ -299,6 +303,7 @@ export const SomeComponent = () =&gt; {
   return &lt;VerySlowComponentMemo&gt;{child}&lt;/VerySlowComponentMemo&gt;;
 };
 </code></pre>
+<h4>Client wrapper for server components</h4>
 <p>Instead of turning the <code>ServerComponent</code> into a client component, we can pass it down as a child to a client component wrapper that handles the state and UI rendering. The server component is still responsible only for data fetching. <em>This also means that wrapping your root layout in the client component does not automatically turn your entire app into a client rendering.</em></p>
 <pre><code class="lang-js">'use client';
 
