--- a/kexizeroing.github.io/URL-driven state in React.html
+++ b/kexizeroing.github.io/URL-driven state in React.html
@@ -66,6 +66,8 @@
 <li>The <code>?search</code> query param from the URL</li>
 </ol>
 <p>Users can change the URL on their own using the address bar or navigation controls. The <code>?search</code> query param is really the source of truth for the search text. We should eliminate the React state from our code, and instead derive the search text from the URL.</p>
+<blockquote><p>If you are not sure if a piece of state belongs in the URL, ask yourself: If someone else clicking this URL, should they see the same state? If so, it belongs in the URL. If not, use a different state management approach.</p>
+</blockquote>
 <p>Let's delete our React state and derive search from the search params instead. Then, whenever we type into our input, we want it to update the URL instead of setting state.</p>
 <pre><code class="lang-jsx">export default function Home() {
   let searchParams = useSearchParams();
@@ -132,6 +134,7 @@ const params = new URLSearchParams(window.location.search);
 params.set("theme", "dark");
 window.history.replaceState({}, "", "?" + params.toString());
 </code></pre>
+<p>When deciding between <code>pushState</code> and <code>replaceState</code>, think about how you want the browser history to behave. <code>pushState</code> creates a new history entry, which makes sense for distinct navigation actions like changing filters, pagination, or navigating to a new view — users can then use the Back button to return to the previous state. On the other hand, <code>replaceState</code> updates the current entry without adding a new one, making it ideal for refinements such as search-as-you-type or minor UI adjustments where you don’t want to flood the history with every keystroke.</p>
 <pre><code class="lang-js">// React Router
 import { useSearchParams } from "react-router-dom";
 
