--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -129,6 +129,7 @@ import json from "./foo.json" with { type: "json" };
 import("foo.json", { with: { type: "json" } })
 </code></pre>
 <blockquote><p>Update on June 2025: Import Attributes and JSON Modules are now in ES2025. Import attributes now let you import JSON and other non-JavaScript assets natively, without bundler magic. You can now do this in plain JavaScript: <code>import config from './config.json' with { type: 'json' };</code>.</p>
+<p>Note that when you import a module (be it JS or JSON), it's cached for the lifetime of the environment, even if the result is a network or parsing failure. All imports for a given specifier &amp; type return the same module.</p>
 </blockquote>
 <h3>Import maps</h3>
 <p>In common module systems, such as CommonJS, or a module bundler like webpack, the import specifier was mapped to a specific file, and users only needed to apply the bare module specifier (usually the package name) in the import statement, and concerns around module resolution were taken care of automatically.</p>
