--- a/kexizeroing.github.io/Using images in web.html
+++ b/kexizeroing.github.io/Using images in web.html
@@ -44,6 +44,23 @@
 <h3>AVIF</h3>
 <p>WebP is on the verge of replacing JPEG and PNG as the best image to use on the web thanks to Safari 14 finally supporting it. However, an even better image format, AVIF, is already looking to replace it.</p>
 <p>AVIF outperformed both JPEG and WebP. Companies like Netflix and Facebook want AVIF to become an image format standard on the web. They provided numerous visual examples that showed how AVIF was a preferred image format compared to JPEG. It’s currently only supported by Chrome. Hopefully AVIF won’t take ten years to get adopted by all major browsers like it did for WebP. Regardless, webmasters can use the AVIF image format now by using the same <code>srcset</code> attribute used for WebP.</p>
+<h2>How PNG files structure</h2>
+<p>A PNG file follows a strict binary structure. It begins with a fixed signature (magic number) that identifies it as a PNG file, followed by a sequence of chunks. Each chunk describes a specific part of the image, such as metadata, pixel data, or color profiles.</p>
+<pre><code>PNG file layout:
+[8 bytes]   Signature
+[4 bytes]   Chunk length
+[4 bytes]   Chunk type
+[...bytes]  Chunk data
+[4 bytes]   CRC
+</code></pre>
+<p>The first 8 bytes identify the file as a PNG (<code>bytes[0] === 0x89 &amp;&amp; bytes[1] === 0x50 &amp;&amp; bytes[2] === 0x4E &amp;&amp; ...</code>). Immediately after the signature, every PNG file starts with the IHDR chunk (Image Header), which contains the image’s metadata such as width, height, bit depth, and color type.</p>
+<p>To extract the width and height, you only need to read specific positions in the file:</p>
+<ol>
+<li>Verify the PNG signature (first 8 bytes)</li>
+<li>Locate the IHDR chunk (it always comes first)</li>
+<li>Read 4 bytes for width and another 4 bytes for height</li>
+<li>Interpret them as unsigned 32-bit big-endian integers</li>
+</ol>
 <h2>Responsive images</h2>
 <p>This is where the <code>img</code> tag's <code>sizes</code> and <code>srcset</code> attributes come to into play. The TL;DR of these attributes is that it allows you to tell the browser different versions of your image for different screen widths and what size the image should be for a given set of media queries.</p>
 <pre><code class="lang-html">&lt;!-- Different sizes --&gt;
