--- a/tifa-233.com/模板 - 矩阵.html
+++ b/tifa-233.com/模板 - 矩阵.html
@@ -5,7 +5,7 @@
 仅在 GCC 下测试过
 {% endnote %}</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/lalg/mat.hpp">https://cplib.tifa-233.com/src/code/lalg/mat.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/lalg/mat.hpp">https://cplib.tifa-233.com/include/lalg/mat.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
