--- a/tifa-233.com/模板 - 自动取模的整数类 (mod_int).html
+++ b/tifa-233.com/模板 - 自动取模的整数类 (mod_int).html
@@ -6,7 +6,7 @@
 仅在 GCC 下测试过
 {% endnote %}</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/math/mint.hpp">https://cplib.tifa-233.com/src/code/math/mint.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/math/mint_s30.hpp">https://cplib.tifa-233.com/src/code/math/mint_s30.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/math/mint_s63.hpp">https://cplib.tifa-233.com/src/code/math/mint_s63.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/math/mint_d31.hpp">https://cplib.tifa-233.com/src/code/math/mint_d31.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/math/mint_d63.hpp">https://cplib.tifa-233.com/src/code/math/mint_d63.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 其中使用了 Montgomery 约乘, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/math/mint.hpp">https://cplib.tifa-233.com/include/math/mint.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_s30.hpp">https://cplib.tifa-233.com/include/math/mint_s30.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_s63.hpp">https://cplib.tifa-233.com/include/math/mint_s63.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_sbrt.hpp">https://cplib.tifa-233.com/include/math/mint_sbrt.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_d31.hpp">https://cplib.tifa-233.com/include/math/mint_d31.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_d63.hpp">https://cplib.tifa-233.com/include/math/mint_d63.hpp</a>, <a href="https://cplib.tifa-233.com/include/math/mint_dbrt.hpp">https://cplib.tifa-233.com/include/math/mint_dbrt.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 其中使用了 Montgomery 约乘/Barrett 约减, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
