--- a/tifa-233.com/笔记 - Cantor展开与逆Cantor展开.html
+++ b/tifa-233.com/笔记 - Cantor展开与逆Cantor展开.html
@@ -3,7 +3,7 @@
 <p>洛谷给我推了个模板题, 就顺便补一下笔记</p>
 <p>Cantor 展开是用于求排列字典序的算法, 逆 Cantor 展开即根据字典序还原排列的算法</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/edh/cantor.hpp">https://cplib.tifa-233.com/src/code/edh/cantor.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/edh/cantor_inv.hpp">https://cplib.tifa-233.com/src/code/edh/cantor_inv.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/edh/cantor.hpp">https://cplib.tifa-233.com/include/edh/cantor.hpp</a>, <a href="https://cplib.tifa-233.com/include/edh/cantor_inv.hpp">https://cplib.tifa-233.com/include/edh/cantor_inv.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
