--- a/tifa-233.com/笔记 - 精确覆盖问题, 重复覆盖问题与DLX.html
+++ b/tifa-233.com/笔记 - 精确覆盖问题, 重复覆盖问题与DLX.html
@@ -2,7 +2,7 @@
 <h2><a href="https://github.com/Tiphereth-A/Tiphereth-A.github.io/blob/master/source/_posts/dlx.md">仓库源文</a>，<a href="https://tifa-233.com/archives/dlx">站点原文</a></h2>
 <p>DLX(Dancing Links X)是一种用于解决精确覆盖问题的优美算法</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/util/dlx.hpp">https://cplib.tifa-233.com/src/code/util/dlx.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/opt/dlx.hpp">https://cplib.tifa-233.com/include/opt/dlx.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
