--- a/tifa-233.com/随笔 - C++ 的高维向量.html
+++ b/tifa-233.com/随笔 - C++ 的高维向量.html
@@ -2,7 +2,7 @@
 <h2><a href="https://github.com/Tiphereth-A/Tiphereth-A.github.io/blob/master/source/_posts/draft-018.md">仓库源文</a>，<a href="https://tifa-233.com/archives/draft-018">站点原文</a></h2>
 <p>为了方便写高维数组以及初始化, 就简单封了一个结构体</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/util/ndvec.hpp">https://cplib.tifa-233.com/src/code/util/ndvec.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/util/ndvec.hpp">https://cplib.tifa-233.com/include/util/ndvec.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
