--- a/tifa-233.com/随笔 - 关于 C++ 模板的部分特化.html
+++ b/tifa-233.com/随笔 - 关于 C++ 模板的部分特化.html
@@ -10,12 +10,13 @@
 <p>一切看起来都是那么美好, 直到你尝试输出一个字符串. 在你输出字符串时, 编译器拒绝了你的代码, 并说你的重载和</p>
 <p>{% icodeweb blog lang:cpp draft-021/sign.cpp %}</p>
 <p>撞车了</p>
-<p>为什么会这样呢? 答案在于部分模板特化的 <a href="https://en.cppreference.com/w/cpp/language/partial_specialization#Partial_ordering">匹配规则</a>, 简单来说, 编译器不能确定你的重载和 <code>&lt;string&gt;</code> 里的重载哪个更特殊, 画成 Hasse 图是这样的:</p>
+<p>为什么会这样呢? 答案在于部分模板特化的 <a href="https://cppreference.com/w/cpp/language/function_template.html#Function_template_overloading">匹配规则</a>, 简单来说, 编译器不能确定你的重载和 <code>&lt;string&gt;</code> 里的重载哪个更特殊, 画成 Hasse 图是这样的:</p>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/tifa-233.com/source/_posts/fig1.svg"/></p>
 <p>注意到你的 &lt;font color=blue&gt;重载&lt;/font&gt; 和 <code>&lt;string&gt;</code> 里的 &lt;font color=red&gt;重载&lt;/font&gt; 是不可比的, 所以在匹配时无法决定哪个优先级更高</p>
 <p>因此正确的写法应该是这样:</p>
 <p>{% icodeweb blog lang:cpp draft-021/overload2.cpp %}</p>
 <h2>参考资料</h2>
 <ul>
-<li><a href="https://en.cppreference.com/w/cpp/language/partial_specialization">Partial template specialization - cppreference.com</a></li>
+<li><a href="https://cppreference.com/w/cpp/language/function_template.html">Function template - cppreference.com</a></li>
+<li><a href="https://cppreference.com/w/cpp/language/partial_specialization.html">Partial template specialization - cppreference.com</a></li>
 </ul>
