--- a/f2h2h1.github.io/Windows下通过PEB读取进程的环境变量.html
+++ b/f2h2h1.github.io/Windows下通过PEB读取进程的环境变量.html
@@ -10,7 +10,8 @@ wmi 和 powershell 也没有方式能读取进程的环境变量。
 <p>Windows 下只能通过 PEB 来读取环境变量。
 PEB 是一个臃肿的结构体，且 msdn 里没有这个结构体的详细信息。
 PEB 的具体结构根据操作系统的版本不同而不同，也和进程的位数有关。
-PEB 里除了环境变量，还是有执行目录，可执行文件路径，命令行等信息。</p>
+PEB 里除了环境变量，还是有执行目录，可执行文件路径，命令行等信息。
+PEB 是 Process Environment Block 进程 环境 块</p>
 <p>笔者在网上搜索了很久才在这个站点里找到 PEB 详细的结构
 <a href="http://terminus.rewolf.pl/terminus">http://terminus.rewolf.pl/terminus</a></p>
 <p>通过 PEB 读取进程的环境变量的具体流程</p>
