--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -253,6 +253,14 @@
   PHP_CLI_SERVER_WORKERS="10" php -S 127.0.0.1:8082 -t ./pub/ ./phpserver/router.php
 </code></pre>
 </li>
+<li>2.4.7 之后的版本也有一个内置的 server<ul>
+<li><a href="https://experienceleague.adobe.com/en/docs/commerce-operations/tools/cli-reference/commerce-on-premises#serverrun">https://experienceleague.adobe.com/en/docs/commerce-operations/tools/cli-reference/commerce-on-premises#serverrun</a><pre><code>php bin/magento server:run
+php bin/magento server:run --port=8080
+php bin/magento server:run --port=8080 --workerNum=10
+</code></pre>
+</li>
+</ul>
+</li>
 <li>magento2 的缓存十分严重，如果发现一些修改没有生效，可以尝试运行这几条命令刷新缓存<pre><code>  php bin/magento cache:clean
   php bin/magento indexer:reindex
   php bin/magento cache:flush
@@ -408,10 +416,12 @@
  Magento_Elasticsearch
  Magento_Elasticsearch6
  Magento_Elasticsearch7
+ Magento_Elasticsearch8
  Magento_InventoryElasticsearch
  Magento_OpenSearch
  2.4.5 是 Magento_Elasticsearch,Magento_Elasticsearch7,Magento_Elasticsearch6
  2.4.6 是 Magento_Elasticsearch,Magento_Elasticsearch7,Magento_OpenSearch
+ 2.4.8 是 Magento_Elasticsearch,Magento_Elasticsearch8,Magento_OpenSearch
 </code></pre>
 </li>
 <li>比较完整的安装命令，但仅供参考<pre><code> php bin/magento setup:install  \
@@ -630,6 +640,12 @@ EOF
 <li><a href="https://bbs.mallol.cn/">https://bbs.mallol.cn/</a></li>
 </ul>
 &lt;!--
+
+各种安装环境
+    操作系统
+    原生或docker
+    需要的组件
+    需要的插件
 
 通过 alias 设置当前命令行里的 php 版本
 alias php="/c/Users/a/dev/php-7.4.29-Win32-vc15-x64/php.exe"; \
