--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -1891,6 +1891,7 @@ php bin/magento queue:consumers:list
 php bin/magento queue:consumers:start sales_rule.codegenerator
 
 好像每个消费者都需要一个单独的命令
+当一个队列中的消息都处理完后，这个命令就会停止，如果需要处理新的消息需要手动重新启动或通过定时任务启动
 
 php bin/magento queue:consumers:start [--max-messages=&lt;value&gt;] [--batch-size=&lt;value&gt;] [--single-thread] [--area-code=&lt;value&gt;] &lt;consumer_name&gt;
 
@@ -1916,9 +1917,51 @@ php -r "while(true){exec('php bin/magento cron:run --group=consumers');sleep(5);
 
 
 
+MySQL适配器将消息存储在数据库中。 三个数据库表（queue、queue_message和queue_message_status）管理消息队列工作负载
+queue
+    id
+    name 来自 queue_consumer.xml 的 consumer -&gt; queue
+queue_message
+    id
+    topic_name 来自 communication.xml 的 topic -&gt; name
+    body
+queue_message_status
+    id
+    queue_id -&gt; queue 的 id
+    message_id -&gt; queue_message 的 id
+    updated_at
+    status
+    number_of_trials
+
+SELECT * FROM queue WHERE name = 'product_alert.queue' limit 1
+SELECT * FROM queue_message x WHERE topic_name = 'product_alert' limit 10
+SELECT * FROM queue_message_status WHERE queue_id = (
+    SELECT id FROM queue WHERE name = 'product_alert.queue' limit 1
+) limit 10;
+SELECT * FROM queue_message_status WHERE message_id = (
+    SELECT id FROM queue_message WHERE topic_name = 'product_alert' limit 1
+) limit 10;
+
+status 的值在这个文件里
+vendor/magento/module-mysql-mq/Model/QueueManagement.php
+
+
+magento2 默认只支持 MySQL 或 RabbitMQ 作为 队列
+新版似乎也支持 ActiveMQ Artemis 了
+虽然也可以通过扩展实现 redis 队列
+
 queue.xml 主要用于定义消息队列的属性和配置。
+从 Magento 2.2 开始，该文件已被官方弃用（deprecated）
+https://developer.adobe.com/commerce/php/development/components/message-queues/migration/
+
+
+在 Magento 2.3 及更高版本（尤其是 2.4+）中，消息队列的配置主要通过以下文件完成：
 queue_consumer.xml 主要用于定义如何消费和处理这些消息。
 
+communication.xml 定义消息主题（Topic） 和消息接口
+queue_consumer.xml 定义消费者及其配置（如连接方式、处理类、并行数量等）
+queue_publisher.xml 将主题映射到发布者（连接/交换机）
+queue_topology.xml 定义交换器（Exchange）、队列（Queue） 以及它们之间的绑定关系（Binding）
 
 --&gt;
 
@@ -3349,6 +3392,47 @@ $cacheManager-&gt;save($data, $cacheKey, $tags, $lifeTime);
 $cacheManager-&gt;load($cacheKey);
 $cacheManager-&gt;remove($cacheKey);
 $cacheManager-&gt;clean();
+
+
+如何自定义一个缓存
+    新建 etc/cache.xml
+        &lt;config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:Cache/etc/cache.xsd"&gt;
+            &lt;type name="full_page" translate="label,description" instance="Magento\PageCache\Model\Cache\Type"&gt;
+                &lt;label&gt;Page Cache&lt;/label&gt;
+                &lt;description&gt;Full page caching&lt;/description&gt;
+            &lt;/type&gt;
+        &lt;/config&gt;
+        instance 就是新建的 CacheType
+    新建一个 CacheType
+        继承 \Magento\Framework\Cache\Frontend\Decorator\TagScope
+        use Magento\Framework\App\Cache\Type\FrontendPool;
+        use Magento\Framework\Cache\Frontend\Decorator\TagScope;
+
+        class CacheType extends TagScope
+        {
+            const TYPE_IDENTIFIER = 'graphql_rate_limiting';
+
+            const CACHE_TAG = 'GRAPHQL_RATE_LIMITING';
+
+            /**
+            * @param FrontendPool $cacheFrontendPool
+            */
+            public function __construct(FrontendPool $cacheFrontendPool)
+            {
+                parent::__construct(
+                    $cacheFrontendPool-&gt;get(self::TYPE_IDENTIFIER),
+                    self::CACHE_TAG
+                );
+            }
+        }
+    修改 env.php
+        cache 的配置
+        启用 cache ，只有修改 env.php 才可以实现默认启用缓存
+    参考
+        https://experienceleague.adobe.com/zh-hans/docs/commerce-operations/implementation-playbook/best-practices/planning/redis-service-configuration
+        https://developer.adobe.com/commerce/php/development/cache/partial/database-caching/
+        https://developer.adobe.com/commerce/php/development/cache/partial/cache-type/
+
 
 --&gt;
 
