--- a/f2h2h1.github.io/把网页导出成PDF.html
+++ b/f2h2h1.github.io/把网页导出成PDF.html
@@ -103,7 +103,7 @@ a 标签
 <li>如果有样式的需求，就尽量在原有的代码里修改样式适应打印，如果改不动了，还是单独写一份用于打印的 html 代码，再用隐藏的 iframe 标签生成 PDF</li>
 </ul>
 </li>
-<li>如果想让生成的 PDF 样式保持一致，最好还是在后台生成。但笔者认为，大部分情况下浏览器之间微小的差异是可以忽略的。</li>
+<li>如果想让生成的 PDF 样式保持一致，最好还是在后台生成。但笔者认为，大部分情况下浏览器之间微小的差异是可以忽略的。在后台生成可以更好地支持移动端。</li>
 </ol>
 <h2>示例代码</h2>
 <h3>使用 window.print 事件来生成 PDF</h3>
@@ -168,8 +168,10 @@ a 标签
         tmpNode.src = src;
         document.body.appendChild(tmpNode);
     }
-    addScript("https://cdn.bootcdn.net/ajax/libs/dom-to-image/2.6.0/dom-to-image.js");
-    addScript("https://cdn.bootcdn.net/ajax/libs/jspdf/2.1.1/jspdf.umd.js");
+    addScript("https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js");
+    addScript("https://cdn.jsdelivr.net/npm/jspdf@2.1.1/dist/jspdf.umd.js");
+    addScript("https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js");
+    addScript("https://cdn.jsdelivr.net/npm/dompurify@3.3.0/dist/purify.min.js");
     setTimeout(()=&gt;{
 
         domtoimage.toJpeg(document.body, { quality: 0.95, bgcolor: '#FFFFFF' })
@@ -245,7 +247,7 @@ a 标签
     }
     var meta = document.createElement('meta');
     meta.setAttribute('http-equiv', 'Content-Security-Policy');
-    meta.setAttribute('content', 'script-src https://cdn.bootcdn.net');
+    meta.setAttribute('content', 'script-src https://cdn.jsdelivr.net');
     // 将新创建的 meta 标签插入到 head 标签中
     document.getElementsByTagName('head')[0].appendChild(meta);
 })();
@@ -258,7 +260,7 @@ a 标签
         tmpNode.src = src;
         document.body.appendChild(tmpNode);
     }
-    addScript("https://cdn.bootcdn.net/ajax/libs/dom-to-image/2.6.0/dom-to-image.js");
+    addScript("https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js");
     setTimeout(()=&gt; {
         domtoimage.toJpeg(document.body, { quality: 0.95, bgcolor: '#FFFFFF' })
             .then(function (dataUrl) {
@@ -270,6 +272,13 @@ a 标签
     }, 3000)
 })();
 </code></pre>
+<ul>
+<li>jspdf 使用 html 生成 pdf 时，需要依赖 html2canvas 和 dompurify</li>
+<li>jspdf 生成 pdf 时，如果遇到非 ascii 字符，需要有对应的字体才可以生成，不然会渲染成乱码<ul>
+<li>中文字体都非常大，基本不能直接用在客户端</li>
+</ul>
+</li>
+</ul>
 <h3>使用 Chrome 的命令行参数来生成 PDF</h3>
 <pre><code>"C:\Users\a\AppData\Local\Google\Chrome\Application\chrome.exe" \
     --headless=new \
@@ -353,6 +362,17 @@ if __name__ == '__main__':
     with sync_playwright() as playwright:
         run(playwright)
 </code></pre>
+<h3>使用 docker 容器里的 chrome 来生成 PDF</h3>
+<ol>
+<li>只使用 Chrome 镜像<ol>
+<li>原生的 Chrome 镜像 lscr.io/linuxserver/chrome</li>
+<li>精简过的 Chrome 镜像 zenika/alpine-chrome</li>
+</ol>
+</li>
+<li>使用 Chrome 镜像和 Playwright 镜像
+ 既可以使用 zenika/alpine-chrome 也可以使用 lscr.io/linuxserver/chrome</li>
+<li>自制镜像，在 Playwright 镜像中安装浏览器</li>
+</ol>
 <h3>使用 libreoffice 的命令行把网页转换为 pdf</h3>
 <p>要先在 libreoffice 的安装目录里找到这个命令 soffice</p>
 <pre><code>soffice --headless --convert-to pdf "D:\docs\网页.html"
@@ -403,6 +423,13 @@ https://github.com/wkhtmltopdf/wkhtmltopdf
 其实可以不单输出 pdf ，输出 图片 html 代码也是可以的吧
 把那个 seo 的仓库再改一下
 面向一般用户的，面向开发者的
+
+
+安卓 iOS 上浏览器的支持？
+    安卓上的 chrome 是可以用 window.print 保存pdf的
+    但 安卓上的国产浏览器基本都不行
+
+
 
 
 afterprint 和 beforeprint 事件允许页面在打印开始之前更改其内容（例如，也许是移除 banner）然后在打印完成后还原这些更改。
