--- a/index.html
+++ b/index.html
@@ -6,12 +6,92 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9198 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9243 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=informal.top/Another%20project.html>2025-11-28 Another project</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202547%20Wilding%20%E7%9A%84%E6%9C%9F%E4%B8%AD%E5%AE%B6%E9%95%BF%E4%BC%9A.html>2025-11-26 父范学堂 2547 Wilding 的期中家长会</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202547%20%E6%94%B6%E7%BC%A9.html>2025-11-26 折返点 2547 收缩</a></li>
+
+<li><a href=hijiangtao.github.io/%E6%8F%90%E7%A4%BA%E5%B7%A5%E7%A8%8B%E6%9C%80%E4%BD%B3%E5%AE%9E%E8%B7%B5%EF%BC%9A%E5%A6%82%E4%BD%95%E4%B8%8E%20AI%20%E6%9B%B4%E5%A5%BD%E5%9C%B0%E5%AF%B9%E8%AF%9D.html>2025-11-26 提示工程最佳实践：如何与 AI 更好地对话</a></li>
+
+<li><a href=blog.forecho.com/RichCalls%206.0%EF%BC%9A%E4%B8%93%E4%B8%BA%E7%BE%8E%E8%82%A1%E4%BA%A4%E6%98%93%E8%80%85%E6%89%93%E9%80%A0%E7%9A%84%E4%BB%98%E8%B4%B9%E4%BF%A1%E6%81%AF%E5%85%B1%E4%BA%AB%E7%A4%BE%E5%8C%BA.html>2025-11-21 RichCalls 6.0：专为美股交易者打造的付费信息共享社区</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202546%20%E4%BB%80%E4%B9%88%E6%98%AF%E7%88%B1.html>2025-11-19 父范学堂 2546 什么是爱</a></li>
+
+<li><a href=babyno.top/%E5%88%9B%E9%80%A0%E7%90%83%E4%BC%9A04%E4%BF%AE%E6%94%B9%E5%99%A81.0.19%E5%8F%91%E5%B8%83.html>2025-11-19 创造球会04修改器1.0.19发布</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202546%20%E8%B7%91%E6%AD%A5%E8%81%8A%E6%BD%9C%E6%B0%B4.html>2025-11-16 折返点 2546 跑步聊潜水</a></li>
+
+<li><a href=blog.forecho.com/PAHub%EF%BC%9A%E4%B8%BA%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%E8%80%85%E6%89%93%E9%80%A0%E7%9A%84%E5%9C%A8%E7%BA%BF%E5%A4%8D%E7%9B%98%E4%B8%8E%E5%AD%A6%E4%B9%A0%E7%A4%BE%E5%8C%BA.html>2025-11-16 PAHub：为价格行为交易者打造的在线复盘与学习社区</a></li>
+
+<li><a href=www.cnfeat.com/%E6%88%91%E7%9A%84%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E5%A5%BD%E7%89%A9%20002_100%20%E7%83%A7%E6%9D%AF.html>2025-11-14 我的长期主义好物 002/100 烧杯</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202545%20%E7%BE%A4%E6%85%A2%E8%B7%91%E6%98%AF%E7%B2%BE%E7%A5%9E%E6%8C%89%E6%91%A9.html>2025-11-13 折返点 2545 群慢跑是精神按摩</a></li>
+
+<li><a href=www.cnfeat.com/%E6%88%91%E7%9A%84%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E5%A5%BD%E7%89%A9%20001_100%20%E7%B4%A2%E5%BC%95%E5%8D%A1.html>2025-11-13 我的长期主义好物 001/100 索引卡</a></li>
+
+<li><a href=www.cnfeat.com/%E6%88%91%E8%8A%B1%E4%BA%8620%E5%A4%9A%E5%B9%B4%EF%BC%8C%E6%89%8D%E6%94%B9%E6%8E%89%E8%BF%99%E4%B8%AA%E5%86%99%E4%BD%9C%E5%9D%8F%E4%B9%A0%E6%83%AF.html>2025-11-13 我花了20多年，才改掉这个写作坏习惯</a></li>
+
+<li><a href=babyno.top/%E5%88%9B%E9%80%A0%E7%90%83%E4%BC%9A04%E4%BF%AE%E6%94%B9%E5%99%A81.0.18%E5%8F%91%E5%B8%83.html>2025-11-12 创造球会04修改器1.0.18发布</a></li>
+
+<li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%953%E6%AD%A5%E5%88%9B%E5%BB%BA%E3%80%8C%E6%BA%90%E6%B6%8C%E6%B5%81%E3%80%8D%E5%8D%A1%E7%89%87%E7%B3%BB%E7%BB%9F%EF%BC%9F.html>2025-11-12 如何3步创建「源涌流」卡片系统？</a></li>
+
+<li><a href=blog.forecho.com/%E5%A6%82%E4%BD%95%E6%AD%A3%E7%A1%AE%E5%9C%B0%E9%87%91%E5%AD%97%E5%A1%94%E5%BC%8F%E5%8A%A0%E4%BB%93%EF%BC%9A%E6%9E%84%E5%BB%BA%E7%9B%88%E5%88%A9%E5%A4%B4%E5%AF%B8%E7%9A%84%E8%89%BA%E6%9C%AF.html>2025-11-10 如何正确地金字塔式加仓：构建盈利头寸的艺术</a></li>
+
+<li><a href=codeinchinese.com/%E9%A6%96%E6%AC%A1%E6%91%86%E6%91%8A%EF%BC%9A%E5%B0%8F%E5%AD%A6%E9%87%91%E7%A7%8B%E5%A4%A7%E9%9B%86.html>2025-11-10 首次摆摊：小学金秋大集</a></li>
+
+<li><a href=blog.forecho.com/%E6%88%90%E5%8A%9F%E4%BA%A4%E6%98%93%E8%80%85%E7%9A%84%E4%B8%89%E4%B8%AA%E6%A0%B8%E5%BF%83%E7%89%B9%E8%B4%A8%EF%BC%9A%E8%B7%B3%E5%87%BA%E8%83%9C%E7%8E%87%E9%99%B7%E9%98%B1.html>2025-11-08 成功交易者的三个核心特质：跳出胜率陷阱</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202545%20%E5%88%AB%E7%AD%89%E6%89%AD%E5%88%B0%E8%85%B0%E6%89%8D%E6%83%B3%E8%B5%B7%E8%A6%81%E6%8B%89%E4%BC%B8.html>2025-11-07 父范学堂 2545 别等扭到腰才想起要拉伸</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202544%20%E7%A7%8B%E6%97%A5%E5%B0%8F%E8%AE%B0%EF%BC%9A%E9%9B%A8%E5%A4%9C%E4%B8%87%E5%9C%A3%E8%8A%82%E3%80%81%E5%B1%B1%E6%9E%97%E8%98%91%E8%8F%87%E4%B8%8E%E7%96%97%E6%84%88%E7%9A%84%E6%88%8F%E5%89%A7.html>2025-11-07 父范学堂 2544 秋日小记：雨夜万圣节、山林蘑菇与疗愈的戏剧</a></li>
+
+<li><a href=conge.livingwithfcs.org/2025%20%E5%8D%81%E6%9C%88%E8%AF%BB%20%E7%A7%81%E4%BA%BA%E7%94%9F%E6%B4%BB%E5%8F%B2%20%E5%BF%83%E7%90%86%E5%AD%A6%20%E6%95%B0%E5%AD%A6%20%E5%93%88%E5%88%A9%E6%B3%A2%E7%89%B9%206%20%E6%9C%AC.html>2025-11-07 2025 十月读 私人生活史 心理学 数学 哈利波特 6 本</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202544%20%E7%94%A8%E7%A2%B3%E6%9D%BF%E9%9E%8B%E6%97%A5%E5%B8%B8%E8%AE%AD%E7%BB%83.html>2025-11-06 折返点 2544 用碳板鞋日常训练</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%9F%A5%E6%99%93%EF%BC%8C%E6%98%AF%E7%AC%AC%E4%B8%80%E6%AD%A5%EF%BC%9A%E5%86%99%E5%9C%A811%E6%9C%887%E6%97%A5FCS%E7%9F%A5%E6%99%93%E6%97%A5.html>2025-11-06 知晓，是第一步：写在11月7日FCS知晓日</a></li>
+
+<li><a href=www.zhaohuabing.com/%E5%9C%A8%20Ambient%20Mesh%20%E4%B8%AD%E4%BD%BF%E7%94%A8%20Envoy%20Gateway%20%E6%89%A9%E5%B1%95%20Redis%20%E9%9B%86%E7%BE%A4.html>2025-11-06 在 Ambient Mesh 中使用 Envoy Gateway 扩展 Redis 集群</a></li>
+
+<li><a href=blog.forecho.com/%E8%B6%85%E8%B6%8A%20K%20%E7%BA%BF%E5%BD%A2%E6%80%81%EF%BC%9A%E6%9E%84%E5%BB%BA%E4%B8%93%E4%B8%9A%E4%BA%A4%E6%98%93%E8%80%85%E7%9A%84%E7%BA%AA%E5%BE%8B%E4%B8%8E%E5%BF%83%E7%90%86%E6%A1%86%E6%9E%B6.html>2025-11-04 超越 K 线形态：构建专业交易者的纪律与心理框架</a></li>
+
+<li><a href=sund.site/%E5%A4%96%E9%83%A8%E5%8C%96%E7%9A%84J%E4%BA%BA.html>2025-11-03 外部化的J人</a></li>
+
+<li><a href=www.cnfeat.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E4%BD%A0%E6%88%90%E5%8A%9F%E4%BA%86%EF%BC%8C%E5%8D%B4%E8%BF%98%E6%98%AF%E4%B8%8D%E5%B9%B8%E7%A6%8F%EF%BC%9F.html>2025-11-02 为什么你成功了，却还是不幸福？</a></li>
+
+<li><a href=mabbs.github.io/%E8%AE%A9%E5%8D%9A%E5%AE%A2%E6%B0%B8%E6%81%92%E7%9A%84%E6%8E%A2%E7%B4%A2.html>2025-11-01 让博客永恒的探索</a></li>
+
+<li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E5%85%BB%E6%88%90%E6%97%A5%E8%AF%BE%E4%B8%80%E5%8D%A1%E7%9A%84%E4%B9%A0%E6%83%AF%EF%BC%9F.html>2025-11-01 如何养成日课一卡的习惯？</a></li>
+
+<li><a href=www.cnfeat.com/%E5%88%AB%E7%AD%89%E4%B8%93%E6%B3%A8%E5%8A%9B%EF%BC%8C%E5%8E%BB%E5%88%9B%E9%80%A0%E4%B8%93%E6%B3%A8%E5%8A%9B.html>2025-10-31 别等专注力，去创造专注力</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202543%20%E8%98%91%E8%8F%87%E5%B1%95%E8%A7%88.html>2025-10-30 父范学堂 2543 蘑菇展览</a></li>
+
+<li><a href=www.cnfeat.com/%E5%B9%B6%E9%9D%9E%E6%89%80%E6%9C%89%E8%AE%A1%E5%88%92%E4%BD%A0%E9%83%BD%E8%A6%81%E7%A7%AF%E6%9E%81%E4%BB%A5%E5%AF%B9.html>2025-10-30 并非所有计划你都要积极以对</a></li>
+
+<li><a href=www.cnfeat.com/%E8%B6%85%E7%BA%A7%E5%AE%9E%E7%94%A8%EF%BC%81%E5%A6%82%E4%BD%95%E7%94%A8%E7%AC%A6%E5%8F%B7%E6%8F%90%E5%8D%87%E5%8D%A1%E7%89%87%E7%AC%94%E8%AE%B0%E6%95%88%E7%8E%87%EF%BC%9F.html>2025-10-29 超级实用！如何用符号提升卡片笔记效率？</a></li>
+
+<li><a href=www.cnfeat.com/%E6%B8%85%E7%A9%BA%E5%A4%A7%E8%84%91%EF%BC%8C%E4%BB%8E%E5%86%99%E4%B8%8B%E7%AC%AC%E4%B8%80%E5%BC%A0%E5%8D%A1%E7%89%87%E5%BC%80%E5%A7%8B.html>2025-10-28 清空大脑，从写下第一张卡片开始</a></li>
+
+<li><a href=f2h2h1.github.io/_%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E5%92%8C%E6%95%B0%E6%8D%AE%E7%A7%91%E5%AD%A6.html>2025-10-27 _人工智能和数据科学</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202543%20%E5%BE%97%E5%88%B0%E5%8F%8C%E6%96%B0%E7%9A%84Adidas%20Adizero%20Adios%20Pro%204.html>2025-10-27 折返点 2543 得到双新的Adidas Adizero Adios Pro 4</a></li>
+
+<li><a href=blog.forecho.com/MB%20%E5%89%A5%E5%A4%B4%E7%9A%AE%20Setup%EF%BC%9A%E5%8C%BA%E9%97%B4%E5%86%85%20BLSHS%20%E4%B8%8E%E7%AA%81%E7%A0%B4%20BO%20%E7%9A%84%E6%89%A7%E8%A1%8C%E5%8F%A3%E5%BE%84.html>2025-10-24 MB 剥头皮 Setup：区间内 BLSHS 与突破 BO 的执行口径</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202542%20%E9%87%87%E8%98%91%E8%8F%87%E8%AE%B0%EF%BC%9A%E4%BB%8E%E5%A5%BD%E5%A5%87%E5%88%B0%E6%94%B6%E8%8E%B7.html>2025-10-23 父范学堂 2542 采蘑菇记：从好奇到收获</a></li>
+
+<li><a href=sund.site/Omarchy%20%E4%B8%80%E4%BA%9B%E4%B8%AD%E6%96%87%E7%8E%AF%E5%A2%83%E4%B8%8B%E7%9A%84%E8%AE%BE%E7%BD%AE.html>2025-10-22 Omarchy 一些中文环境下的设置</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202542%20%E6%AF%8F%E6%97%A5%E6%8B%89%E4%BC%B8%E8%BF%9B%E8%A1%8C%E4%BA%86%2010%20%E5%A4%A9%E4%BA%86.html>2025-10-21 折返点 2542 每日拉伸进行了 10 天了</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E4%BA%A4%E6%98%93%E6%88%90%E5%8A%9F%E7%9A%84%E5%9F%BA%E7%9F%B3%EF%BC%9A%E4%BB%93%E4%BD%8D%E5%A4%A7%E5%B0%8F%E7%AE%A1%E7%90%86.html>2025-10-17 价格行为学 - 交易成功的基石：仓位大小管理</a></li>
 
@@ -30,6 +110,8 @@
 <li><a href=young-lord.github.io/%E5%B0%86%20iPad%20%E4%B8%8E%20Apple%20Pencil%20%E4%BD%9C%E4%B8%BA%E6%95%B0%E4%BD%8D%E5%B1%8F%E4%BD%BF%E7%94%A8.html>2025-10-14 将 iPad 与 Apple Pencil 作为数位屏使用</a></li>
 
 <li><a href=mabbs.github.io/%E4%B8%80%E6%AC%A1%E6%89%BE%E5%9B%9EGitHub%E4%B8%8A%E8%A2%AB%E5%88%A0%E9%99%A4%E4%BB%93%E5%BA%93%E7%9A%84%E7%BB%8F%E5%8E%86.html>2025-10-12 一次找回GitHub上被删除仓库的经历</a></li>
+
+<li><a href=informal.top/How%20to%20imporve%20english.html>2025-10-11 How to imporve english</a></li>
 
 <li><a href=conge.livingwithfcs.org/2025%20%E4%B9%9D%E6%9C%88%E8%AF%BB%20%E7%90%86%E6%83%B3%E5%9B%BD%20%E6%B3%95%E5%8F%B2%20%E5%AD%A6%E4%B9%A0%20%E6%B2%9F%E9%80%9A%E2%80%A6%E2%80%A6%207%20%E6%9C%AC%20.html>2025-10-09 2025 九月读 理想国 法史 学习 沟通…… 7 本 </a></li>
 
@@ -1425,6 +1507,8 @@
 
 <li><a href=conge.livingwithfcs.org/2024%20%E4%BA%94%E6%9C%88%E8%AF%BB%E7%BB%8F%E6%B5%8E%E5%8D%B1%E6%9C%BA%EF%BC%8C%E5%BF%83%E7%90%86%E5%AD%A6%EF%BC%8C%E8%90%A5%E5%85%BB%E5%AD%A6%EF%BC%8C%E4%BA%86%E5%87%A1%E5%9B%9B%E8%AE%AD%EF%BC%8C%E8%AF%97%E6%AD%8C%EF%BC%8C%E7%A7%91%E5%B9%BB%E2%80%A6%E2%80%A610%20%E6%9C%AC.html>2024-06-04 2024 五月读经济危机，心理学，营养学，了凡四训，诗歌，科幻……10 本</a></li>
 
+<li><a href=kneep.github.io/Lua%20%E4%BB%8E%E5%85%A5%E9%97%A8%E5%88%B0%E6%94%BE%E5%BC%83.html>2024-06-04 Lua 从入门到放弃</a></li>
+
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/6.9.html>2024-06-03 6.9</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/6.8.html>2024-06-03 6.8</a></li>
@@ -1539,7 +1623,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202416%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2011%20%E5%91%A8%20%E5%BC%BA%E5%BA%A6%E5%88%B0%E9%A1%B6.html>2024-04-30 折返点 2416 - 2024 隧道马训练第 11 周 强度到顶</a></li>
 
-<li><a href=kneep.github.io/%E3%80%90Paul%20Graham%E3%80%91%E5%A6%82%E4%BD%95%E5%88%9B%E7%AB%8B%E8%B0%B7%E6%AD%8C%E9%82%A3%E6%A0%B7%E7%9A%84%E5%85%AC%E5%8F%B8.html>2024-04-29 【Paul Graham】如何创立谷歌那样的公司</a></li>
+<li><a href=kneep.github.io/Paul%20Graham%EF%BC%9A%E5%A6%82%E4%BD%95%E5%88%9B%E7%AB%8B%E8%B0%B7%E6%AD%8C%E9%82%A3%E6%A0%B7%E7%9A%84%E5%85%AC%E5%8F%B8.html>2024-04-29 Paul Graham：如何创立谷歌那样的公司</a></li>
 
 <li><a href=www.zhaohuabing.com/%E7%A0%81%E5%86%9C%E6%BC%AB%E6%B8%B8%E8%AE%B0%EF%BC%9A%E7%A1%85%E8%B0%B7%E6%8E%A2%E7%A7%98.html>2024-04-28 码农漫游记：硅谷探秘</a></li>
 
@@ -2164,6 +2248,8 @@
 <li><a href=babyno.top/%E3%80%8CApple%E5%BF%AB%E6%8D%B7%E6%8C%87%E4%BB%A4%E3%80%8D%20-%20%E6%95%B0%E6%8D%AE%E8%87%AA%E5%8A%A8%E4%BF%9D%E5%AD%98%E8%87%B3Numbers.html>2023-11-24 「Apple快捷指令」 - 数据自动保存至Numbers</a></li>
 
 <li><a href=tifa-233.com/VP%E8%AE%B0%E5%BD%95%20-%202023%20CCPC%20%E6%A1%82%E6%9E%97%E7%AB%99.html>2023-11-24 VP记录 - 2023 CCPC 桂林站</a></li>
+
+<li><a href=kneep.github.io/Is%20It%20Worth%20Being%20Wise%3F.html>2023-11-24 Is It Worth Being Wise?</a></li>
 
 <li><a href=lihan3238.github.io/%E5%A5%B3%E5%A8%B2%E8%A1%A5%E5%A4%A9%E8%AE%A1%E5%88%922.0.html>2023-11-21 女娲补天计划2.0</a></li>
 
@@ -18271,6 +18357,8 @@
 
 <li><a href=kexizeroing.github.io/React%2018%20Suspense%20and%20startTransition.html>Oct 7 2023 React 18 Suspense and startTransition</a></li>
 
+<li><a href=kexizeroing.github.io/New%20to%20MobX%20in%20React.html>Oct 26 202 New to MobX in React</a></li>
+
 <li><a href=kexizeroing.github.io/SWR%2C%20SWC%2C%20and%20MSW.html>Oct 25 202 SWR, SWC, and MSW</a></li>
 
 <li><a href=kexizeroing.github.io/Rice%20course%20-%20intro%20to%20database.html>Oct 21 201 Rice course - intro to database</a></li>
@@ -18292,6 +18380,8 @@
 <li><a href=kexizeroing.github.io/Debugging%20CSS.html>Oct 10 202 Debugging CSS</a></li>
 
 <li><a href=kexizeroing.github.io/PDF%20custom%20rendering.html>Nov 6 2022 PDF custom rendering</a></li>
+
+<li><a href=kexizeroing.github.io/Making%20constants%20type-safe%20in%20TypeScript.html>Nov 3 2025 Making constants type-safe in TypeScript</a></li>
 
 <li><a href=kexizeroing.github.io/What%20is%20Nginx.html>Nov 3 2022 What is Nginx</a></li>
 
