--- a/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
+++ b/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
@@ -175,7 +175,7 @@ COPY --from=build /app/dist .
 # On your local machine
 docker build -t ghcr.io/your-username/your-app-name:latest .
 
-# Github username and access token
+# Push to the GitHub Container Registry using your access token
 docker login ghcr.io
 docker push ghcr.io/your-username/your-app-name:latest
 
