--- a/kexizeroing.github.io/Inspirations.html
+++ b/kexizeroing.github.io/Inspirations.html
@@ -46,6 +46,7 @@
 <ul>
 <li><a href="https://www.youtube.com/watch?v=O3ZtlTwDnbk&amp;t=300s">https://www.youtube.com/watch?v=O3ZtlTwDnbk&amp;t=300s</a></li>
 <li><a href="https://www.youtube.com/watch?v=CvAySC5ex9c">https://www.youtube.com/watch?v=CvAySC5ex9c</a></li>
+<li><a href="https://www.youtube.com/watch?v=I3AsmAWWGEs">https://www.youtube.com/watch?v=I3AsmAWWGEs</a></li>
 </ul>
 <p>Lee Robinson:</p>
 <ul>
