--- a/tifa-233.com/模板 - Miller-Rabin 素性检验与 Pollard-Rho 算法.html
+++ b/tifa-233.com/模板 - Miller-Rabin 素性检验与 Pollard-Rho 算法.html
@@ -9,7 +9,7 @@
 </ul>
 <p>{% endnote %}</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/nt/is_prime.hpp">https://cplib.tifa-233.com/src/code/nt/is_prime.hpp</a>, <a href="https://cplib.tifa-233.com/src/code/nt/pfactors.hpp">https://cplib.tifa-233.com/src/code/nt/pfactors.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/nt/is_prime.hpp">https://cplib.tifa-233.com/include/nt/is_prime.hpp</a>, <a href="https://cplib.tifa-233.com/include/nt/pfactors.hpp">https://cplib.tifa-233.com/include/nt/pfactors.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
