--- a/tifa-233.com/笔记 - 扩展中国剩余定理(exCRT).html
+++ b/tifa-233.com/笔记 - 扩展中国剩余定理(exCRT).html
@@ -2,7 +2,7 @@
 <h2><a href="https://github.com/Tiphereth-A/Tiphereth-A.github.io/blob/master/source/_posts/excrt.md">仓库源文</a>，<a href="https://tifa-233.com/archives/excrt">站点原文</a></h2>
 <p>我们都知道, CRT 用于求解的方程组要求其模数必须两两互素, 而 exCRT 则没有这条限制</p>
 <p>{% note warning %}
-<a href="https://cplib.tifa-233.com/src/code/nt/crt_mod.hpp">https://cplib.tifa-233.com/src/code/nt/crt_mod.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
+<a href="https://cplib.tifa-233.com/include/nt/crt.hpp">https://cplib.tifa-233.com/include/nt/crt.hpp</a>, <a href="https://cplib.tifa-233.com/include/nt/crt_mod.hpp">https://cplib.tifa-233.com/include/nt/crt_mod.hpp</a> 存放了笔者对该算法/数据结构的最新实现, 建议前往此处查看相关代码
 {% endnote %}</p>
 &lt;!-- more --&gt;
 
